--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,12 +1,21 @@
 {
   "manifest_version": 3,
   "name": "Focus Mode Enforcer",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Blocks distracting sites during scheduled focus periods.",
   "background": {
     "service_worker": "background.js"
   },
+  "action": {
+      "default_popup": "popup.html",
+      "default_title": "Focus Mode"
+  },
   "permissions": ["storage", "alarms", "declarativeNetRequest"],
   "host_permissions": ["<all_urls>"],
-  "action": {}
+  "web_accessible_resources": [
+      {
+          "resources": ["blocked.html"],
+          "matches": ["<all_urls>"]
+      }
+  ]
 }
